Time: 7 ms (98.14%), Space: 57.2 MB (22.96%) - LeetHub